# Replication_MigrateLib

./: .gitignore  Instructs.md  LibMig  README.md
migratelib/: LICENSE  README.md  pyproject.toml
migratelib/src/libmig/: __main__.py  cli.py  cmd.py  llm_clients.py  mdutils.py  project.py  project_git.py
migratelib/src/libmig/api_mapping/: api_mapper.py
migratelib/src/libmig/code_analysis/: ast_util.py  async_transformer.py  call_grind_parser.py  cg.py  cg_builder.py  cst_mapping.py  qualified_name_index.py
migratelib/src/libmig/code_merge/: skipped_code_detector.py  skipped_code_merger.py
migratelib/src/libmig/lib_index/: api_models.py  generate_lib_info.py  lib_index.py
migratelib/src/libmig/metrics/: migloc.py
migratelib/src/libmig/mig/: inferred_async_transform_workflow.py  libmig_runner.py  llmmig_workflow.py  manual_edit_workflow.py  mig_error.py  mig_log.py  mig_report_models.py  mig_round_paths.py  premig_workflow.py  skipped_code_merge_workflow.py
migratelib/src/libmig/mig_file_search/: lib_usage_mig_file_finder.py  mig_file_finder_base.py
migratelib/src/libmig/prompting/: first_round_prompt_builder.py  prompt_builder_base.py
migratelib/src/libmig/usage/: lib_usage.py  lib_usage_detector.py
migratelib/src/libmig/utest/: __init__.py  utest_report.py  utest_report_diff.py
migratelib/src/libmig/utils/: __init__.py  cache.py  cgx.py  error_message_parser.py  file_diff.py  line_range.py  template.py  venv.py  venv_installer.py
migratelib/test/libmig_test/: completion_resources.py
migratelib/test/test_data/: report-1.json
results/: wc
(+26409 files in other folders)
