[tool.poetry]
name = "libmig"
version = "0.1.0"
description = ""
authors = ["Mohayemin <mohayeminul.islam@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.5"
typing-extensions = "^4.12.2"
johnnydep = "^1.20.5"
gitpython = "^3.1.43"
python-dotenv = "^1.0.1"
pytest-json-report = "^1.5.0"
openai = "^1.52.0"
pytest-cov = "^5.0.0"
unidiff = "^0.7.5"
pytest = "^8.3.3"
pytest-html = "^4.1.1"
coverage = "^7.6.7"
sentence-transformers = "^3.3.1"
libcst = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.0"

[tool.poetry.scripts]
libmig = "libmig.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
